prevent text overflow

--- a/pegasus/sites.v3/code.org/public/css/dance-landing/dance.css
+++ b/pegasus/sites.v3/code.org/public/css/dance-landing/dance.css
@@ -19,7 +19,7 @@
 }
 
 .dance-try-button {
-  font-size: 18px;
+  font-size: 15px;
   height: 40px;
   background-color: white;
   border-color: white;
